# cellarr

./: .dockerignore  .env.example  .gitignore  .mise.toml  BUILD_STATUS.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md
crates/cellarr-api/: Cargo.toml
crates/cellarr-api/src/: assets.rs  auth.rs  backup.rs  calendar.rs  commands.rs  error.rs  events.rs  fs_health.rs  health.rs  import_list_sync.rs  lib.rs  logfile.rs  manual_import.rs  mediacover.rs  metadata.rs  native.rs  openapi.rs  queue.rs  release_search.rs  shim.rs  state.rs  stream.rs  tags.rs  webauth.rs  webhook.rs
crates/cellarr-api/src/notifications/: email.rs  http.rs  mod.rs  providers.rs  providers_support.rs  script.rs
crates/cellarr-api/tests/: fs_health_v3.rs  managed_flag.rs  native_api.rs  notification_providers.rs  stream.rs  v3_backup_log_health.rs  v3_compat_resources.rs  v3_customformat_delay.rs  v3_delete.rs  v3_detail_tasks_calendar.rs  v3_faces.rs  v3_import_list_calendar.rs  v3_import_list_sync.rs  v3_lookup.rs  v3_monitor.rs  v3_naming_config.rs  v3_notification_blocklist.rs  v3_quality_definition.rs  v3_queue.rs  v3_shim.rs  v3_tags.rs  webauth.rs
crates/cellarr-api/tests/common/: mod.rs
crates/cellarr-cli/: Cargo.toml
crates/cellarr-cli/src/: boot.rs  clients.rs  config.rs  lib.rs  main.rs  metadata.rs  otel.rs  pipeline.rs  registry.rs  resolver.rs
crates/cellarr-cli/src/managed/: error.rs  export.rs  interpolate.rs  loader.rs  mod.rs  plan.rs  (+3 more)
crates/cellarr-cli/tests/: boot_smoke.rs  config_layering.rs  live_lookup_e2e.rs  managed_config_boot.rs  managed_config_reconcile.rs  migrate_subcommand.rs  reconcile_downloads.rs  release_search_tolerates_bad_client.rs  scheduler_drives_anime_remap.rs  scheduler_drives_pipeline.rs
crates/cellarr-core/: Cargo.toml
crates/cellarr-core/src/: auth.rs  blocklist.rs  config.rs  decision.rs  delay.rs  error.rs  history.rs  ids.rs  importlist.rs  lib.rs  media.rs  monitor.rs  notification.rs  parsed.rs  pipeline.rs  profile.rs  release.rs  releaseprofile.rs  repo.rs  tag.rs  traits.rs  webhook.rs
crates/cellarr-core/tests/: coordinates_json.rs
crates/cellarr-db/: Cargo.toml
crates/cellarr-db/migrations/: 0005_blocklist.sql  0006_import_list.sql  0008_content_metadata.sql  0009_notification_providers.sql  0010_delay_profile.sql  0011_media_management.sql  0013_content_tags.sql  0014_quality_definition.sql  0016_series_type.sql  0017_managed_config.sql  0018_content_meta_rich.sql
crates/cellarr-db/src/: convert.rs  db.rs  dialect.rs  error.rs  lib.rs  writer.rs
crates/cellarr-db/tests/: roundtrip.rs  snapshot.rs
crates/cellarr-decide/: Cargo.toml
crates/cellarr-decide/src/: decide.rs  error.rs  lib.rs  matching.rs  quality.rs  releaseprofile.rs  scoring.rs  trash.rs
crates/cellarr-decide/tests/: corpus.rs  indexer_criteria.rs  mutation_kills.rs  oracle_cf.rs  oracle_cf_score.rs  oracle_trash_cf.rs  proptest_precedence.rs  quality_size_bounds.rs  release_profile_decide.rs  surprising_rules.rs  trash_cf_static.rs  trash_fixtures.rs  trash_import.rs
crates/cellarr-download/: Cargo.toml
crates/cellarr-download/examples/: qbittorrent_live.rs  transmission_live.rs
crates/cellarr-download/scripts/: qbittorrent-live.sh
crates/cellarr-download/src/: blackhole.rs  deluge.rs  error.rs  http.rs  lib.rs  lifecycle.rs  nzbget.rs  qbittorrent.rs  rtorrent.rs  sabnzbd.rs  source.rs  transmission.rs
crates/cellarr-download/tests/: blackhole_contract.rs  deluge_contract.rs  nzbget_contract.rs  qbittorrent_contract.rs  rtorrent_contract.rs  sabnzbd_contract.rs  source_resolver.rs  transmission_contract.rs
crates/cellarr-fs/: Cargo.toml
crates/cellarr-fs/src/: error.rs  extras.rs  fsops.rs  health.rs  import.rs  lib.rs  nfo.rs  permissions.rs  recycle.rs  rename.rs  scan.rs
crates/cellarr-fs/tests/: import_safety.rs  naming_corpus.rs  proptest_naming.rs
crates/cellarr-indexers/: Cargo.toml
crates/cellarr-indexers/src/: caps.rs  cardigann.rs  error.rs  feed.rs  http.rs  lib.rs  ratelimit.rs  torznab.rs
crates/cellarr-indexers/tests/: cardigann_replay.rs  ratelimit.rs  torznab_replay.rs
crates/cellarr-jobs/: Cargo.toml
crates/cellarr-jobs/src/: clock.rs  error.rs  importlists.rs  indexers.rs  job.rs  lib.rs  notify.rs  runner.rs  scheduler.rs
crates/cellarr-jobs/tests/: anime_remap_pipeline.rs  delay_profile_hold.rs  import_list_sync.rs  indexer_live_pipeline.rs  interactive_grab.rs  interactive_release_search.rs  manual_import.rs  notification_dispatch.rs  pipeline_e2e.rs  remote_path_and_blackhole.rs  scheduler.rs  webhook_and_blocklist.rs
crates/cellarr-llm/: Cargo.toml
crates/cellarr-llm/src/: cloud.rs  error.rs  fixture.rs  lib.rs  local.rs  provider.rs
crates/cellarr-media/: Cargo.toml
crates/cellarr-media/src/: content.rs  error.rs  identify.rs  lib.rs  meta.rs  module.rs  registry.rs  resolve.rs
crates/cellarr-media/tests/: anime_mapping.rs  modules.rs  registry.rs
crates/cellarr-meta/: Cargo.toml
crates/cellarr-meta/src/: cache.rs  config.rs  error.rs  http.rs  lib.rs  normalized.rs  ratelimit.rs  scene.rs  server.rs  thetvdb.rs  tmdb.rs
crates/cellarr-meta/tests/: anime_corpus.rs  live_thetvdb.rs  record_replay.rs
crates/cellarr-migrate/: Cargo.toml
crates/cellarr-migrate/src/: config_read.rs  error.rs  lib.rs  model.rs  profiles.rs  radarr.rs  recognize.rs  sonarr.rs  source.rs  write.rs
crates/cellarr-migrate/tests/: migrate.rs
crates/cellarr-parse/: Cargo.toml
crates/cellarr-parse/examples/: parse_titles.rs
crates/cellarr-parse/fuzz/: Cargo.toml
crates/cellarr-parse/src/: audio.rs  codec.rs  edition.rs  group.rs  hdr.rs  language.rs  lib.rs  numbering.rs  proper_repack.rs  resolution.rs  source.rs  title.rs  tokens.rs  year.rs
crates/cellarr-parse/tests/: corpus.rs  oracle.rs  proptest_no_panic.rs  upstream_parity.rs
crates/cellarr-plugins/: Cargo.toml
crates/cellarr-plugins/src/: capability.rs  config.rs  error.rs  host.rs  lib.rs
crates/cellarr-plugins/tests/: host.rs
crates/cellarr-plugins/wit/: indexer.wit
meta-service/: Cargo.toml
meta-service/src/: main.rs
(+492 files in other folders)
