[workspace]
resolver = "2"
members = [
    "crates/cellarr-core",
    "crates/cellarr-db",
    "crates/cellarr-parse",
    "crates/cellarr-decide",
    "crates/cellarr-media",
    "crates/cellarr-indexers",
    "crates/cellarr-download",
    "crates/cellarr-fs",
    "crates/cellarr-jobs",
    "crates/cellarr-meta",
    "crates/cellarr-llm",
    "crates/cellarr-plugins",
    "crates/cellarr-api",
    "crates/cellarr-migrate",
    "crates/cellarr-cli",
    "meta-service",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = ""
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
cellarr-core = { path = "crates/cellarr-core" }
cellarr-db = { path = "crates/cellarr-db" }
cellarr-parse = { path = "crates/cellarr-parse" }
cellarr-decide = { path = "crates/cellarr-decide" }
cellarr-media = { path = "crates/cellarr-media" }
cellarr-indexers = { path = "crates/cellarr-indexers" }
cellarr-download = { path = "crates/cellarr-download" }
cellarr-fs = { path = "crates/cellarr-fs" }
cellarr-jobs = { path = "crates/cellarr-jobs" }
cellarr-meta = { path = "crates/cellarr-meta" }
cellarr-llm = { path = "crates/cellarr-llm" }
cellarr-plugins = { path = "crates/cellarr-plugins" }
cellarr-api = { path = "crates/cellarr-api" }
cellarr-migrate = { path = "crates/cellarr-migrate" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"

# Time & ids
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Parsing / text
regex = "1.11"
fancy-regex = "0.14"
once_cell = "1.20"

# Concurrency
rayon = "1.10"
governor = "0.7"

# Persistence
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Plugins
wasmtime = "46"
wasmtime-wasi = "46"

# Test utilities
rstest = "0.23"
proptest = "1.5"

[profile.release]
lto = "thin"
strip = true
