[package]
name = "meta-service"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "cellarr-meta"
path = "src/main.rs"

[dependencies]
cellarr-core.workspace = true
cellarr-meta = { workspace = true, features = ["standalone"] }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
