[package]
name = "cellarr-api"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
cellarr-db.workspace = true
cellarr-decide.workspace = true
cellarr-fs.workspace = true
cellarr-jobs.workspace = true
cellarr-parse.workspace = true
axum = { workspace = true }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
reqwest = { workspace = true }
rust-embed = "8.5"
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
reqwest = { workspace = true, features = ["stream"] }
futures = "0.3"
uuid.workspace = true
serde_json.workspace = true
