[package]
name = "cellarr-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "cellarr_cli"
path = "src/lib.rs"

[[bin]]
name = "cellarr"
path = "src/main.rs"

[dependencies]
cellarr-core.workspace = true
cellarr-db.workspace = true
cellarr-parse.workspace = true
cellarr-decide.workspace = true
cellarr-media.workspace = true
cellarr-indexers.workspace = true
cellarr-download.workspace = true
cellarr-fs.workspace = true
cellarr-jobs.workspace = true
cellarr-meta.workspace = true
cellarr-llm.workspace = true
cellarr-plugins.workspace = true
cellarr-api.workspace = true
cellarr-migrate.workspace = true
tokio.workspace = true
clap.workspace = true
figment.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
serde_json.workspace = true
