[package]
name = "cellarr-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "cellarr_cli"
path = "src/lib.rs"

[[bin]]
name = "cellarr"
path = "src/main.rs"

[dependencies]
cellarr-core.workspace = true
cellarr-db.workspace = true
cellarr-parse.workspace = true
cellarr-decide.workspace = true
cellarr-media.workspace = true
cellarr-indexers.workspace = true
cellarr-download.workspace = true
cellarr-subtitles.workspace = true
cellarr-fs.workspace = true
cellarr-jobs.workspace = true
cellarr-meta.workspace = true
cellarr-llm.workspace = true
cellarr-plugins.workspace = true
cellarr-api.workspace = true
cellarr-migrate.workspace = true
tokio.workspace = true
clap.workspace = true
figment.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

# Opt-in OpenTelemetry (OTLP) export — off by default so the default static
# binary neither links a network exporter nor dials out. Enabled with
# `--features otlp`; see docs/18-observability.md. OTLP over HTTP/protobuf
# (reqwest + rustls, already in the tree) rather than gRPC/tonic.
opentelemetry = { version = "0.28", optional = true }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls"], optional = true }
tracing-opentelemetry = { version = "0.29", features = ["metrics"], optional = true }

[features]
default = []
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
# Compile the daemon against a Postgres server instead of the default embedded
# SQLite. Opt-in: the default build stays offline / single-binary / SQLite.
# Enables the Postgres backend across the whole persistence layer via cellarr-db.
postgres = ["cellarr-db/postgres"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
reqwest = { workspace = true }
serde_json.workspace = true
# The reconcile tests seed grabs then backdate one `created_at` directly — via a
# second sqlx handle to the same SQLite file — to exercise the age-gated cleanup
# of a long-stalled, peer-less download.
sqlx = { workspace = true }
