[package]
name = "cellarr-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Shared domain types, seam traits, and the pipeline state machine for cellarr."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
serde_json.workspace = true
rstest.workspace = true
