[package]
name = "cellarr-db"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "Persistence layer for cellarr: SQLite/Postgres repositories, the writer-actor, migrations, and FTS."

[features]
default = ["sqlite"]
sqlite = []
postgres = ["sqlx/postgres"]

[dependencies]
cellarr-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
time.workspace = true
uuid.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
