[package]
name = "cellarr-decide"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
toml = "0.8"
