[package]
name = "cellarr-decide"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
regex.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
toml = "0.8"
# CF-matching oracle only (tests/oracle_cf.rs, #[ignore]): parse corpus titles and
# diff cellarr's custom-format matching against a live Sonarr's /api/v3/parse.
cellarr-parse.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
