[package]
name = "cellarr-fs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
tokio.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
serde = { workspace = true }
serde_json.workspace = true
toml = "0.8"
rstest.workspace = true
proptest.workspace = true
