[package]
name = "cellarr-indexers"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
governor.workspace = true
serde.workspace = true
thiserror.workspace = true
quick-xml = { version = "0.37", features = ["serialize"] }
scraper = "0.21"
