[package]
name = "cellarr-jobs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
cellarr-db.workspace = true
cellarr-decide.workspace = true
cellarr-fs.workspace = true
cellarr-indexers.workspace = true
cellarr-media.workspace = true
cellarr-download.workspace = true
tokio.workspace = true
tokio-cron-scheduler = "0.13"
governor.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
