[package]
name = "cellarr-jobs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
cellarr-db.workspace = true
cellarr-decide.workspace = true
cellarr-fs.workspace = true
cellarr-indexers.workspace = true
cellarr-media.workspace = true
cellarr-download.workspace = true
cellarr-parse.workspace = true
tokio.workspace = true
tokio-cron-scheduler = "0.13"
governor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
sqlx = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
