[package]
name = "cellarr-llm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
local = ["dep:reqwest"]
cloud = ["dep:reqwest"]

[dependencies]
cellarr-core.workspace = true
reqwest = { workspace = true, optional = true }
moka.workspace = true
serde.workspace = true
thiserror.workspace = true
