[package]
name = "cellarr-media"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cellarr-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
rstest.workspace = true
serde = { workspace = true }
toml = "0.8"
